comments, raltions and fixes
