# code/app/Controllers/BlogController.php
@@ -1,6 +1,7 @@
 <?
 namespace App\Controllers;
 
+use App\Models\Comment;
 use App\Models\Post;
 use Controller;
 use Symfony\Component\HttpFoundation\Request;
@@ -8,6 +9,9 @@ use Symfony\Component\HttpFoundation\Request;
 use OpenApi\Attributes as OA;
 class BlogController extends Controller
 {
+
+    const COMMENT_TO_LOAD = 3;
+
     #[OA\Get(
         path: '/blog',
         tags: ['blog'],
@@ -15,9 +19,20 @@ class BlogController extends Controller
             new OA\Response(response: 200, description: 'OK')
         ]
     )]
+
+    #[OA\Get(
+        path: '/blog/page/{page}',
+        tags: ['blog'],
+        parameters: [
+            new OA\Parameter('page', 'page', 'blog page', 'path', true)
+        ],
+        responses: [
+            new OA\Response(response: 200, description: 'OK')
+        ]
+    )]
     public function index(int $page = 1){
-        $data = Post::query()->paginate($page)->asArray();
-        return $this->json(["data"=>$data]);
+        $data = Post::query()->with(Comment::class, self::COMMENT_TO_LOAD)->paginate($page)->asArray();
+        return $this->json($data);
     }
 
     #[OA\Get(
@@ -32,8 +47,8 @@ class BlogController extends Controller
         ]
     )]
      public function show(int $id){
-        $model = Post::find($id);
-        return $this->json($model->getAttributes());
+        $model = Post::find($id)->asArray();
+        return $this->json($model);
     }
 
     #[OA\Post(
@@ -41,9 +56,9 @@ class BlogController extends Controller
         tags: ['blog'],
         requestBody: new OA\RequestBody(
             content: new OA\JsonContent(
-                required: ["title", "text"],
+                required: ["author", "text"],
                 properties: [
-                    new OA\Property(property: 'title', type: 'string'),
+                    new OA\Property(property: 'author', type: 'string'),
                     new OA\Property(property: 'text', type: 'string')
                 ]
             )
@@ -91,7 +106,7 @@ class BlogController extends Controller
         $model = Post::find($id);
         $model->fill($request->toArray());
         $res = $model->update();
-        return $this->json(["data" => $id, "model"=>$res]);
+        return $this->json(["data" => $res]);
     }
 
 
@@ -110,5 +125,22 @@ class BlogController extends Controller
         $model = Post::find($id);
         $res = $model->delete();
         return $this->json(["data"=>$res]);
+    }
+
+
+    #[OA\Get(
+        path: '/blog/{id}/comments',
+        description: null,
+        tags: ['blog'],
+        parameters: [
+            new OA\Parameter('id', 'id', 'blog post id', 'path', true)
+        ],
+        responses: [
+            new OA\Response(response: 200, description: 'OK')
+        ]
+    )]
+     public function show_comments(int $id){
+        $model = Comment::query()->where(["post_id", "=", $id])->get()->asArray();
+        return $this->json($model);
     }
 }
